--- a/style.css
+++ b/style.css
@@ -1,19 +1,97 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 
+:root{
+    --light-black: #121212;
+    --light-white: #F9F9F9;
+    --gray: #B2B2B2;
+    --blue1: #2192FF;
+    --blue2: #31E1F7;
+}
+
 * {
     box-sizing: border-box;
 }
 
 body{
     font-family: 'Open Sans', sans-serif;
+
+    background-color: var(--light-white);
+
+    margin: auto;
+}
+
+header{
+    height: 50%;
+    
+    padding: 100px 300px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+
+    color: var(--light-white);
+    background: linear-gradient(var(--blue1), var(--blue2));
+}
+
+#div-title{
+    line-height: 20px;
+    margin-bottom: 40px;
+}
+
+#div-title h1{
+    font-size: 36px;
+    font-weight: 700;
+}
+
+#div-title h2{
+    font-size: 27px;
+    font-weight: 600;
+}
+
+#div-task-field{
+    display: flex;
+    width: 100%;
+}
+
+#div-task-field input[type="text"]{
+    width: 90%;
+
+    font-size: 18px;
+    font-weight: 400;
+
+    padding: 8px 16px;
+
+    border: none;
+    border-radius: 20px 0px 0px 20px;
+    background-color: var(--light-white);
+
+    color: var(--light-black);
+}
+
+#div-task-field input[type="submit"]{
+    width: 10%;
+    font-size: 27px;
+    padding: 8px 16px;
+    
+    border: none;
+    border-radius: 0px 20px 20px 0px;
+    background-color: var(--light-white);
+    color: var(--blue1);
+}
+
+main{
+    padding: 40px 400px;
 }
 
 li{
     display: flex;
-    flex-direction: row;
-    align-content: space-between;
+    margin-bottom: 20px;
 
-    background-color: rgb(90, 141, 141);
+    background-color: transparent;
+    box-shadow: 2px 2px 10px var(--gray);
+
+    border-radius: 20px;
 }
 
 li span{
@@ -28,12 +106,28 @@ li input[type="checkbox"]{
 
 li h3{
     width: 80%;
+
+    font-size: 18px;
+    font-weight: 300;
+
+    margin: auto;
+    padding: 8px 16px;
+
+    color: var(--light-black);
 }
 
 li input[type="submit"]{
     width: 10%;
+
+    border: none;
+    background-color: transparent;
+
+    background-image: url("images/trash.svg");
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .finished-task{
     text-decoration: line-through;
+    color: var(--gray);
 }
